--- a/source/kit/components/ui/msm-mobile-menu-item/msm-mobile-menu-item.scss
+++ b/source/kit/components/ui/msm-mobile-menu-item/msm-mobile-menu-item.scss
@@ -5,7 +5,7 @@
   color: $msm-black;
   display: flex;
   height: $mobile-menu-item-height;
-  margin: 10px 0;
+  margin: 0 0 12px 0;
 
   .left-icon {
     font-size: 20px;
